feat(core): Implement robust, automatic task progression and Shadow DOM support
This major update refactors the extension's core architecture to provide a seamless, automatic user experience and adds robust support for modern web components.

Key changes include:

- **Automatic Task Resumption**: Introduced a ackground.js service worker that monitors page navigations. It automatically injects the content script and resumes the guide on the correct pages, eliminating the need for the user to reopen the popup to continue a task.

- **Reliable State Management**: Resolved a critical race condition where step progress was lost during page navigation. The content.js script is now the source of truth for state, awaiting the chrome.storage.local.set operation to complete *before* initiating navigation.

- **Advanced Shadow DOM Traversal**: The indElement function and MutationObserver logic have been significantly enhanced. The extension can now reliably find and wait for elements inside nested Shadow DOMs, making it compatible with complex web component libraries.

- **Improved User Experience**: The guide now feels like a native part of the webpage, advancing automatically and reliably without user intervention.

--- a/manifest.json
+++ b/manifest.json
@@ -5,20 +5,21 @@
   "version": "1.0",
   "permissions": ["activeTab", "scripting", "storage"],
   "host_permissions": ["<all_urls>"], 
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png" 
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ],
   "web_accessible_resources": [
     {
-      "resources": ["tasks.json"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "tasks.json"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
